--- a/views/singlePost.ejs
+++ b/views/singlePost.ejs
@@ -38,9 +38,9 @@
                     </h3>
                 <div class="rateContainer">
                     <label for="rating">Rating : </label>
-                    <input name="rating" id="rating" placeholder="1-5" type="number" min="1" max="5">
+                    <input required name="rating" id="rating" placeholder="1-5" type="number" min="1" max="5">
                 </div>
-                <textarea placeholder="Tell us something..." name="comment" id="comment" cols="30" rows="10"></textarea>
+                <textarea required placeholder="Tell us something..." name="comment" id="comment" cols="30" rows="10"></textarea>
                 <button class="comment-submit-btn" type="submit">Submit</button>
             </form>
         <%} else { %>
